# DSPy-Zero-to-Expert

./: .env.template  .gitignore  README.md  pyproject.toml  refactor_notebooks.py  verify_installation.py
.kiro/specs/dspy-learning/: design.md  requirements.md  tasks.md
.kiro/steering/: marimo-development-standards.md
00-setup/: README.md  environment_test.py  hello_dspy_marimo.py  setup_environment.py  test_installation.py
00-setup/exercises/: exercise_01_environment_check.py  exercise_02_first_signature.py
00-setup/solutions/: exercise_solutions.md
01-foundations/: README.md  interactive_signature_tester.py  module_comparison.py  signatures_basics.py
01-foundations/exercises/: exercise_01_signature_design.py  exercise_02_module_comparison.py  exercise_03_signature_optimization.py
01-foundations/solutions/: exercise_solutions.md
02-advanced-modules/: README.md  debugging_dashboard.py  multi_step_reasoning.py  react_implementation.py  tool_integration.py
02-advanced-modules/exercises/: exercise_01_react_basics.py  exercise_02_tool_integration.py  exercise_03_multi_step_reasoning.py
02-advanced-modules/solutions/: solution_01_react_basics.py  solution_02_tool_integration.py  solution_03_multi_step_reasoning.py
03-retrieval-rag/: README.md  advanced_rag_patterns.py  rag_evaluation_optimization.py  rag_implementation.py  vector_database_setup.py
03-retrieval-rag/exercises/: exercise_01_basic_rag.py  exercise_02_vector_databases.py  exercise_03_advanced_rag.py  exercise_04_rag_evaluation.py
03-retrieval-rag/solutions/: solution_01_basic_rag.py  solution_02_vector_databases.py  solution_03_advanced_rag.py  solution_04_rag_evaluation.py
04-optimization-teleprompters/: README.md  bootstrap_optimization.py  custom_metrics.py  mipro_implementation.py  optimization_dashboard.py
04-optimization-teleprompters/exercises/: bootstrap_exercises.py  custom_metrics_exercises.py  mipro_exercises.py
04-optimization-teleprompters/solutions/: bootstrap_solutions.py  custom_metrics_solutions.py  mipro_solutions.py
05-evaluation-metrics/: README.md  ab_testing_framework.py  custom_metrics_library.py  evaluation_dashboard.py  evaluation_framework.py
05-evaluation-metrics/exercises/: evaluation_exercises.py
05-evaluation-metrics/solutions/: README.md  exercise1_domain_specific_metrics.py  exercise2_statistical_framework.py  exercise3_multi_system_dashboard.py  exercise4_advanced_ab_testing.py
06-datasets-examples/: README.md  data_preprocessing.py  data_preprocessing_interactive.py  data_quality_metrics.py  dataset_explorer.py  dataset_loading_basics.py  dataset_management.py  test_marimo.py
06-datasets-examples/data/: sample_classification.csv  sample_qa.json  sample_rag.jsonl
06-datasets-examples/solutions/: solution_01_basic_loading.py  solution_02_preprocessing.py  solution_03_quality_assessment.py  solution_04_data_exploration.py
07-tracing-debugging/: README.md  debugging_utilities.py  observability_dashboard.py  performance_monitor.py  tracing_implementation.py
07-tracing-debugging/solutions/: solution_01_basic_tracing.py  solution_02_debugging_workflow.py  solution_03_observability_metrics.py  solution_04_performance_optimization.py
08-custom-modules/: README.md  component_library.py  custom_module_template.py  dspy_config.py  module_composition.py  module_testing_framework.py  test_all_modules.py
08-custom-modules/examples/: README.md  basic_custom_module_creation.py  component_composition_patterns.py  module_testing_strategies.py  workflow_orchestration_demo.py
09-production-deployment/: DEPLOYMENT_SUMMARY.md  README.md  cicd_templates.py  cost_optimization.py  demo_exercise.py  deployment_guide.py  deployment_validation.py  docker_templates.py  maintenance_automation.py  maintenance_operations.py  monitoring_setup.py  operational_tools.py  scaling_config.py  scaling_demo.py  scaling_strategies.py  simple_test.py  test_production_system.py
09-production-deployment/examples/: complete_deployment_example.py
09-production-deployment/examples/sample-dspy-app/: .dockerignore  Dockerfile  README.md  docker-compose.yml  main.py  monitoring.py  pyproject.toml  requirements.txt
09-production-deployment/examples/sample-dspy-app/.github/workflows/: deploy.yml
09-production-deployment/examples/sample-dspy-app/k8s/: dspy-sample-api-deployment.yaml  dspy-sample-api-ingress.yaml  dspy-sample-api-service.yaml
09-production-deployment/solutions/: README.md  exercise_01_deployment_setup.py  exercise_02_scaling_optimization.py  exercise_03_maintenance_automation.py  exercise_04_comprehensive_deployment.py
10-advanced-projects/: README.md  agent_communication.py  code_analysis_tool.py  conversational_ai_platform.py  document_processing_system.py  integrated_research_system.py  multi_agent_system.py  research_workflow.py  test_all_projects.py  validate_projects.py
10-advanced-projects/solutions/: README.md  module_01_foundations.py  module_10_advanced_projects.py
10-advanced-projects/solutions/utilities/: __init__.py  dspy_helpers.py
common/: __init__.py  config.py  dspy_extensions.py  evaluation_utils.py  marimo_components.py  utils.py
docs/:  DSPy Zero-to-Expert - Design and Development.md   DSPy_Zero-to-Expert.md  API_REFERENCE.md  BEST_PRACTICES.md  DSPY_3_0_RESEARCH_FINDINGS.md  TROUBLESHOOTING.md
docs/modules/: 01-foundations.md  05-evaluation-metrics.md  08-custom-modules.md  09-production-deployment.md  10-advanced-projects.md
dspy-learning-platform/: index.html  package.json  tailwind.config.ts
dspy-learning-platform/src/: App.tsx  index.css  main.tsx
dspy-learning-platform/src/components/: Assessments.tsx  DesignGuide.tsx  LearningStages.tsx  Overview.tsx  Projects.tsx  Resources.tsx
dspy-learning-platform/src/context/: ProgressContext.tsx
tests/: test_litellm_api_keys.py
(+2 files in other folders)
